--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+azure_storage==0.37.0
 azure-core==1.35.0
 azure-ai-documentintelligence==1.0.2
 azure-cognitiveservices-vision-computervision==0.9.1
