--- a/agents/azure_assistant_agents_config.json
+++ b/agents/azure_assistant_agents_config.json
@@ -1,1 +1,1 @@
-{"fundfact_linguistic_rag_agent": "asst_iVgcXgwWXgDGsiN82NKGWnXl", "fundfact_coder_rag_agent": "asst_ZQSGQWL3SplPvd3BaRkroewE"}
+{"fundfact_coder_rag_agent": "asst_ni4q4VQ6gGHqtyo3UgSuXLae"}
